removing tag from database